🔥 added chaotic aur & blackarch

--- a/usr/local/share/snigdhaos/pacman.conf
+++ b/usr/local/share/snigdhaos/pacman.conf
@@ -34,13 +34,13 @@ Color
 #NoProgressBar
 CheckSpace
 VerbosePkgLists
-ParallelDownloads = 8
+ParallelDownloads = 5
 ILoveCandy
 DisableDownloadTimeout
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel = Required DatabaseOptional
+SigLevel    = Required DatabaseOptional
 LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
@@ -71,32 +71,23 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[arcolinux_repo_testing]
-#SigLevel = PackageRequired DatabaseNever
-#Include = /etc/pacman.d/arcolinux-mirrorlist
+[hawkeye]
+Include = /etc/pacman.d/snigdhaos-mirrorlist
 
-[arcolinux_repo]
-SigLevel = PackageRequired DatabaseNever
-Include = /etc/pacman.d/arcolinux-mirrorlist
 
-[arcolinux_repo_3party]
-SigLevel = PackageRequired DatabaseNever
-Include = /etc/pacman.d/arcolinux-mirrorlist
-
-[arcolinux_repo_xlarge]
-SigLevel = PackageRequired DatabaseNever
-Include = /etc/pacman.d/arcolinux-mirrorlist
-
-#[core-testing]
+#[testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
 
-#[extra-testing]
+[extra]
+Include = /etc/pacman.d/mirrorlist
+
+#[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[extra]
+[community]
 Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
@@ -107,6 +98,12 @@ Include = /etc/pacman.d/mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
+
+[blackarch]
+Include = /etc/pacman.d/blackarch-mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
