fix blackarch pacman

--- a/usr/local/share/snigdhaos/pacman.conf
+++ b/usr/local/share/snigdhaos/pacman.conf
@@ -72,7 +72,8 @@ LocalFileSigLevel = Optional
 # after the header, and they will be used before the default mirrors.
 
 [hawkeye]
-Include = /etc/pacman.d/snigdhaos-mirrorlist
+SigLevel = Never
+Server = https://snigdhalinux.github.io/$repo/$arch
 
 
 #[testing]
@@ -103,6 +104,7 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/chaotic-mirrorlist
 
 [blackarch]
+SigLevel = Never
 Include = /etc/pacman.d/blackarch-mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
